fix footer spacing and position

--- a/public/css/master.css
+++ b/public/css/master.css
@@ -61,7 +61,7 @@ h1 {
 }
 
 footer {
-  position: relative;
+  position: absolute;
   bottom: 0px;
   padding-bottom: 1vh;
   width: 100%;
@@ -71,4 +71,8 @@ ul {
   display: flex;
   position: relative;
   width: 100%;
+}
+
+li {
+  padding: 10px 10px;
 }
